// Vitest Snapshot v1

exports[`TidligstMuligUttak > rendrer riktig når tidligst mulig uttaksalder ikke kunne hentes 1`] = `
<DocumentFragment>
  <div
    class="navds-accordion__item navds-accordion__item--open"
  >
    <button
      aria-expanded="true"
      class="navds-accordion__header"
      data-testid="accordion-header"
      type="button"
    >
      <div
        class="navds-accordion__icon-wrapper"
      >
        <svg
          aria-hidden="true"
          aria-labelledby="title-r1"
          class="navds-accordion__header-chevron"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="title-r1"
          >
            Vis mer
          </title>
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="navds-accordion__header-content navds-heading navds-heading--small"
      >
        Tidligst mulig uttak: 
        <span
          class="_details_c03039"
        >
          Ikke funnet
        </span>
      </span>
    </button>
    <div
      class="navds-accordion__content _content_e53ef6 navds-body-long navds-body-long--medium"
    >
      <p
        class="navds-body-long navds-body-long--medium"
      >
        Vi klarte ikke å finne tidspunkt for når du tidligst kan ta ut alderspensjon. Prøv igjen senere.
        <br />
         
        <br />
      </p>
      <p
        class="navds-body-long navds-body-long--medium"
      >
        For å starte uttak før 67 år må opptjeningen være høy nok. Alle kan derfor ikke starte uttak ved 62 år. Tidspunktet er et estimat på når du tidligst kan ta ut 100 % alderspensjon. I 
        <a
          class="navds-link navds-link--action"
          href=""
        >
          detaljert kalkulator
        </a>
         kan du sjekke om du kan ta ut alderspensjon tidligere med en lavere uttaksgrad.
        <br />
        <br />
        Når du velger uttaksalder, bruker vi måneden etter du fyller år. Velger du for eksempel 62 år, betyr det måneden etter du fyller 62 år.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TidligstMuligUttak > rendrer riktig tittel med formatert uttaksalder og tekst 1`] = `
<DocumentFragment>
  <div
    class="navds-accordion__item navds-accordion__item--open"
  >
    <button
      aria-expanded="true"
      class="navds-accordion__header"
      data-testid="accordion-header"
      type="button"
    >
      <div
        class="navds-accordion__icon-wrapper"
      >
        <svg
          aria-hidden="true"
          aria-labelledby="title-r0"
          class="navds-accordion__header-chevron"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="title-r0"
          >
            Vis mer
          </title>
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="navds-accordion__header-content navds-heading navds-heading--small"
      >
        Tidligst mulig uttak: 
        <span
          class="_details_c03039"
        >
          67 år og 3 md.
        </span>
      </span>
    </button>
    <div
      class="navds-accordion__content _content_e53ef6 navds-body-long navds-body-long--medium"
    >
      <p
        class="navds-body-long navds-body-long--medium"
      >
        For å starte uttak før 67 år må opptjeningen være høy nok. Alle kan derfor ikke starte uttak ved 62 år. Tidspunktet er et estimat på når du tidligst kan ta ut 100 % alderspensjon. I 
        <a
          class="navds-link navds-link--action"
          href=""
        >
          detaljert kalkulator
        </a>
         kan du sjekke om du kan ta ut alderspensjon tidligere med en lavere uttaksgrad.
        <br />
        <br />
        Når du velger uttaksalder, bruker vi måneden etter du fyller år. Velger du for eksempel 62 år, betyr det måneden etter du fyller 62 år.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
